add final deploy settings

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,6 +11,7 @@
     "experimentalDecorators": true,
     "strictPropertyInitialization": false,
     "typeRoots": ["src/@types", "node_modules/@types"],
-    "emitDecoratorMetadata": true
+    "emitDecoratorMetadata": true,
+    "outDir": "./dist"
   }
 }
