--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   "license": "MIT",
   "scripts": {
     "start": "node dist/server.js",
-    "build": "tsc",
+    "build": "yarn install && tsc",
     "dev": "ts-node-dev --ignore-watch node_modules src/server.ts"
   },
   "dependencies": {
@@ -22,8 +22,7 @@
     "pg": "^8.10.0",
     "reflect-metadata": "^0.1.13",
     "typeorm": "^0.3.12",
-    "yup": "^1.0.2",
-    "typescript": "^5.0.2"
+    "yup": "^1.0.2"
   },
   "devDependencies": {
     "@types/cors": "^2.8.13",
@@ -31,6 +30,7 @@
     "@types/express": "^4.17.17",
     "@types/jsonwebtoken": "^9.0.1",
     "@types/node": "^18.15.10",
-    "ts-node-dev": "^2.0.0"
+    "ts-node-dev": "^2.0.0",
+    "typescript": "^5.0.2"
   }
 }
