--- a/package.json
+++ b/package.json
@@ -22,9 +22,7 @@
     "pg": "^8.10.0",
     "reflect-metadata": "^0.1.13",
     "typeorm": "^0.3.12",
-    "yup": "^1.0.2"
-  },
-  "devDependencies": {
+    "yup": "^1.0.2",
     "@types/cors": "^2.8.13",
     "@types/bcryptjs": "^2.4.2",
     "@types/express": "^4.17.17",
@@ -32,5 +30,6 @@
     "@types/node": "^18.15.10",
     "ts-node-dev": "^2.0.0",
     "typescript": "^5.0.2"
-  }
+  },
+  "devDependencies": {}
 }
